# API-Key-Manager

./: .dockerignore  .gitignore  CHANGELOG.md  Creative-Disruptor-Contributions.md  Dockerfile  KeyHub.spec  README.md  README_EN.md  RELEASE.md  config.yaml  config.yaml.example  edge-case-catalog.md  final-summary.md  installer.iss  main.py  prototype.py  pyproject.toml  requirements.txt  ulw-20260622-085518.md  ulw-20260622-113452.md  unconventional-detection-strategies.md  verify_signatures.py  version_info.template  version_info.txt  web.py  webdebug.py
.github/workflows/: build.yml  docker.yml  publish.yml  sync-cherry-models.yml  sync-opencode-models.yml  test.yml
.omo/run-continuation/: ses_10f184502ffeD91akzdIm4hR21.json  ses_10f1cddc8ffe4LyalVsbiApK26.json  ses_1109a8b7bffePTdmVSl9zqW55J.json  ses_1129b69b8ffe6O1GexRmxgjFOq.json  ses_112b50207ffehVlDKKf2owpqt7.json  ses_11329b5f6ffeRqQdZjhEl7g2nq.json  ses_1133dfa97ffeppt6laOpooIe1C.json  ses_11343024dffeTx9a6XAS2bOhjQ.json  ses_1134584bfffeK5pVRk2o2kaKBH.json  ses_113461ab7ffewsaavizrgNMCGS.json  ses_11355445affeGKNpACBy8Z7K20.json  ses_114ad1827ffenauumvJKOY9st0.json
api_key_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: model_capabilities.json  model_capabilities_fallback.json
docs/: ADD_PROVIDER.md  API.md  DEVELOPMENT.md  PROVIDER_REFACTORING_PLAN.md  openapi.json
key_manager/: __init__.py  __main__.py  api_models.py  checker.py  cli.py  config.py  core.py  detector.py  errors.py  i18n.py  logger.py  model_capabilities.py  parser.py  proxy.py  ssrf.py  storage.py  tester.py  url_override.py  validator.py  web.py  webhook.py
key_manager/i18n/: en.json  zh.json
key_manager/providers/: __init__.py  ai302.py  anthropic.py  baichuan.py  base.py  cerebras.py  cohere.py  config_providers.py  cstcloud.py  dashscope.py  dashscope_coding.py  deepseek.py  dmxapi.py  doubao.py  fireworks.py  google.py  grok.py  groq.py  huggingface.py  hyperbolic.py  infini.py  infini_coding.py  kimi.py  kimi_coding.py  longcat.py  mimo.py  mimo_plan.py  minimax.py  minimax_plan.py  (+21 more)
scripts/: extract_from_opencode.py  extract_model_caps.py  extract_models.py  generate_sdk.py  validate_caps.py  verify_icon.py
sdk/: README.md
sdk/python/: pyproject.toml
sdk/python/key_manager_sdk/: __init__.py  async_client.py  client.py  exceptions.py  models.py
src/: config.py  detector.py  parser.py  proxy.py
static_tauri/: index.html
tauri-compare/: index.html  package-lock.json  package.json
templates/: index.html
tests/: __init__.py  conftest.py  helpers.py  test_api_endpoints.py  test_base_check.py  test_bug_fixes.py  test_checker.py  test_core.py  test_deepseek_balance.py  test_detector.py  test_detector_unit.py  test_e2e.py  test_errors.py  test_i18n.py  test_logger.py  test_openapi.py  test_parser.py  test_parser_supplement.py  test_provider_detection.py  test_provider_refactoring.py  test_providers.py  test_proxy.py  test_routes_check.py  test_routes_misc.py  test_routes_models.py  test_routes_providers.py  test_routes_test.py  test_security.py  test_ssrf_supplement.py  test_storage.py  test_tester.py  test_token_limit_fast.py  test_v320_changes.py  test_validator.py  test_validator_supplement.py  test_web_fixes.py  test_webhook.py
(+113 files in other folders)
