[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-key-manager"
version = "4.4.0"
description = "Batch manage API keys for 45+ AI providers with CLI and Web interfaces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Townrain"}
]
keywords = ["api-key", "ai", "openai", "anthropic", "google", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Townrain/API-Key-Manager"
Documentation = "https://github.com/Townrain/API-Key-Manager#readme"
Repository = "https://github.com/Townrain/API-Key-Manager"

[project.scripts]
api-key-manager = "key_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["key_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--ignore=web.py --ignore=main.py --ignore=verify_signatures.py --ignore=key_manager/web.py --ignore=key_manager/cli.py --cov=key_manager --cov-report=term-missing --cov-fail-under=60"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["key_manager"]

[tool.coverage.run]
source = ["key_manager"]
omit = [
    "key_manager/providers/*.py",
    "key_manager/providers/models_registry.py",
    "key_manager/i18n/*",
    "key_manager/web.py",
    "key_manager/cli.py",
    "key_manager/model_capabilities.py",
]

[tool.coverage.report]
show_missing = true
