[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-key-manager-sdk"
version = "3.0.0"
description = "Python SDK for API Key Manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
